{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 5894,
  "lineage": "5aa0c656-ee90-4c87-1f03-c8b5ac9787c5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:857360184083:internet-gateway/igw-0c9633e3942b979dc",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-00ce2d8f8e6ecb305"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-00ce2d8f8e6ecb305"
                ]
              }
            ],
            "id": "igw-0c9633e3942b979dc",
            "internet_gateway_id": "igw-0c9633e3942b979dc",
            "owner_id": "857360184083"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:857360184083:security-group/sg-0b98a1e54096ed585",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0b98a1e54096ed585",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00ce2d8f8e6ecb305"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:857360184083:vpc/vpc-00ce2d8f8e6ecb305",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0824e376e57726d1c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-024f2ebd35a6606db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ce2d8f8e6ecb305",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dc932c2d3b50c3ef",
            "owner_id": "857360184083"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bedrock_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:857360184083:security-group/sg-02576f57f4c3c968b",
            "description": "Security group for Bedrock VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02576f57f4c3c968b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from Lambda",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd1fa78c58ba0495"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bedrock-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "857360184083",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bedrock-vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "bedrock-vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ce2d8f8e6ecb305"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:857360184083:security-group/sg-0bd1fa78c58ba0495",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd1fa78c58ba0495",
            "ingress": [],
            "name": "lambda_sg",
            "name_prefix": "",
            "owner_id": "857360184083",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ce2d8f8e6ecb305"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_lambda_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-2700203219",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b98a1e54096ed585",
            "security_group_rule_id": "sgr-04a8157666dc0e688",
            "self": false,
            "source_security_group_id": "sg-0bd1fa78c58ba0495",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "data.aws_security_group.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:857360184083:subnet/subnet-0db35c13edd7c98e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db35c13edd7c98e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857360184083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trackme-private-subnet-1",
              "type": "private"
            },
            "tags_all": {
              "Name": "trackme-private-subnet-1",
              "type": "private"
            },
            "vpc_id": "vpc-00ce2d8f8e6ecb305"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:857360184083:subnet/subnet-09b6e632d01fcb525",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b6e632d01fcb525",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "857360184083",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trackme-private-subnet-2",
              "type": "private"
            },
            "tags_all": {
              "Name": "trackme-private-subnet-2",
              "type": "private"
            },
            "vpc_id": "vpc-00ce2d8f8e6ecb305"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}